fixing box sizing and removing commented lines

--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -1,5 +1,5 @@
 .footer{
-    height: 80vh;
+    height: auto;
     width: 100%;
     background-color: rgb(62, 71, 158);
     background-size: cover;
