--- a/src/components/ServicesSection/ServiceSection.module.css
+++ b/src/components/ServicesSection/ServiceSection.module.css
@@ -1,5 +1,6 @@
 .services{
-    height: 100%;
+    height: auto;
+    width: 100%;
     margin:5rem 0;
 }
 .service h2{
@@ -33,12 +34,12 @@
 .box{
     justify-content: center;
     align-items: center;
-    /* border: 1px solid #070707; */
     height: auto;
     padding: 1.5rem;
     width: 20vw;
     margin: 1rem .5rem;
     box-shadow: #d2d2d2 0 0 .6rem;
+    border-radius: 4%;
 }
 
 .box:hover{
