--- a/src/components/LandingPage/LandingPage.module.css
+++ b/src/components/LandingPage/LandingPage.module.css
@@ -1,6 +1,6 @@
 .landing{
     height: 80vh;
-    overflow-y: hidden!important;
+    /* overflow-y: hidden!important; */
     background-color:rgb(255, 243, 221);
 }
 .landing .hero_img img{
