--- a/src/components/Testimonials/Testimonials.module.css
+++ b/src/components/Testimonials/Testimonials.module.css
@@ -1,5 +1,5 @@
 .testimonials {
-  height: auto;
+  height: 90vh;
   overflow-y: hidden!important;
   padding-bottom: 5rem;
   background-color: #f3f3f3;
@@ -8,7 +8,7 @@
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  margin: 2rem auto;
+  margin: 6rem auto;
   width: 60%;
   box-shadow: #d2d2d2 0 0 .8rem;
   background-color: #f3f3f3;
@@ -34,7 +34,7 @@
   color: #5a5a5a;
   text-align: center;
   margin: 1rem auto;
-  width: 70%;
+  width: 75%;
   display: flex;
   justify-content: center;
   align-items: center;
