--- a/src/components/ServicesSection/ServiceSection.module.css
+++ b/src/components/ServicesSection/ServiceSection.module.css
@@ -67,3 +67,19 @@
     margin: .5rem 0;
     display: flex;
 }
+
+
+@media (max-width : 768px) {
+    .row{
+        flex-direction: column;
+        align-items: center;
+        margin: auto;
+    }
+
+}   
+
+@media (max-width : 768px) {
+    .box {
+        width: 50%;
+    }
+}
